@@ -1,3 +1,6 @@
+2012-08-03  Kirit Saelensminde  <kirit@felspar.com>
+ Added instrumentation for the number of worker threads in use. Also added decrement to the counter implementation.
+
 2012-08-02  Kirit Saelensminde  <kirit@felspar.com>
  Implement JSON casts for json::array_t and json::object_t.
  Allow the use of constant workers (and in_proc) which makes certain thread wrappers more obvious to implement.
